<resources>
    <string name="app_name">Qicpic</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="login">LOGIN</string>
    <string name="member_s_login">MEMBER\'S LOGIN</string>
    <string name="otp">OTP</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_otp">ENTER OTP</string>
   // <string name="title_activity_home"></string>
    <string name="title_home">Home</string>
    <string name="title_video">Video</string>
    <string name="title_post">Pots</string>
    <string name="title_like">Like</string>
    <string name="title_profile">Profile</string>
    <string name="send">Send</string>
    <string name="search">Search</string>
</resources>