<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ozonetech.qicpic.view.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/navigation_video"
        android:name="com.ozonetech.qicpic.view.ui.video.VideoFragment"
        android:label="@string/title_video"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/navigation_posts"
        android:name="com.ozonetech.qicpic.view.ui.posts.PostsFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_posts" />

    <fragment
        android:id="@+id/navigation_like"
        android:name="com.ozonetech.qicpic.view.ui.likes.LikesFragment"
        android:label="@string/title_like"
        tools:layout="@layout/fragment_likes" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ozonetech.qicpic.view.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>